2008-07-01  Brian Bidulock  <bidulock@openss7.org>

	* po/LINGUAS: added po files for gettext
	* po/Makevars: added po files for gettext
	* po/POTFILES.in: added po files for gettext

2008-06-18  Brian Bidulock  <bidulock@openss7.org>

	* doc/drafts/fixup: more portable
	* doc/drafts/idrefs: update references
	* doc/drafts/iso/draft-bidulock-tsvwg-isos-00.me: ISOS draft
	* doc/drafts/iso/draft-bidulock-tsvwg-itos-00.me: ITOS draft
	* doc/man/striso.refs: update references

2008-05-05  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/otk6.c: be strict with MORE_flag
	* src/modules/isot.c: be strict with MORE_flag

2008-05-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* striso.lsm.in: updates for release
	* striso.spec.in: updates for release
	* debian/mscript_header.in: updates for release
	* debian/rules.in: updates for release
	* debian/striso-core.postinst.in: updates for release
	* debian/striso-core.postrm.in: updates for release
	* debian/striso-core.preinst.in: updates for release
	* debian/striso-core.prerm.in: updates for release
	* debian/striso-init.postinst.in: updates for release
	* debian/striso-init.preinst.in: updates for release
	* src/util/asnlex.l: updates for release
	* src/util/gdmolex.l: updates for release

2008-05-03  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* acinclude.m4: corrections
	* configure.ac: corrections
	* src/include/sys/striso/config.h.in: corrections

	* acinclude.m4: package updates
	* configure.ac: package updates
	* doc/man/Makefile.am: package updates
	* doc/man/striso.refs: package updates
	* doc/man/man4/ISO.4.man: package updates
	* doc/man/man4/apmod.4.man: package updates