@@ -1,6 +1,6 @@
 .\" -*- nroff -*- vim: ft=nroff nocin nosi
 .\"
-.\" @(#) $Id: draft-bidulock-tsvwg-itos-00.me,v 0.9.2.2 2008-06-18 16:45:17 brian Exp $
+.\" @(#) $Id: draft-bidulock-tsvwg-itos-00.me,v 0.9.2.3 2008-07-01 12:48:56 brian Exp $
 .\"
 .\" =========================================================================
 .\"
@@ -52,11 +52,14 @@
 .\" 
 .\" =========================================================================
 .\"
-.\" Last Modified $Date: 2008-06-18 16:45:17 $ by $Author: brian $
+.\" Last Modified $Date: 2008-07-01 12:48:56 $ by $Author: brian $
 .\"
 .\" -------------------------------------------------------------------------
 .\"
 .\" $Log: draft-bidulock-tsvwg-itos-00.me,v $
+.\" Revision 0.9.2.3  2008-07-01 12:48:56  brian
+.\" - updated drafts and docs
+.\"
 .\" Revision 0.9.2.2  2008-06-18 16:45:17  brian
 .\" - widespread updates
 .\"
@@ -65,8 +68,8 @@
 .\"
 .\" =========================================================================
 .ds version Version\ 0.0
-.ds date May\ 8,\ 2008
-.ds expiry November\ 2008
+.ds date June\ 18,\ 2008
+.ds expiry December\ 2008
 .ds year 2008
 .nr levels 0
 .so ../draft4.me
@@ -324,7 +327,7 @@ llil.
 :IP:\*- Internet Protocol
 :IPR:\*- Intellectual Property Rights
 :ISO:\*- International Organization for Standardization
-:ITOS:\*- ISO Transprot over SCTP
+:ITOS:\*- ISO Transport over SCTP
 :ITOT:\*- ISO Transport over TCP
 :ITU:\*- International Telecommunications Union
 :ITU-T:\*- ITU (Telecom Sector)
@@ -1912,6 +1915,9 @@ minor formattting changes.
 .nf
 \fC\s-3
 $Log: draft-bidulock-tsvwg-itos-00.me,v $
+Revision 0.9.2.3  2008-07-01 12:48:56  brian
+- updated drafts and docs
+
 Revision 0.9.2.2  2008-06-18 16:45:17  brian
 - widespread updates
 
